--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.9",
     "@types/react-redux": "^7.1.34",
     "axios": "^1.8.3",
+    "framer-motion": "^12.19.1",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-circular-progressbar": "^2.2.0",
